fix the problem of jumpping affix div

--- a/donkeycar/management/tub_web/static/style.css
+++ b/donkeycar/management/tub_web/static/style.css
@@ -31,6 +31,11 @@ tbody#clips td {
   width: 100%;
 }
 
+/* https://stackoverflow.com/questions/20652581/bootstrap-affix-nav-causes-div-below-to-jump-up */
+.affix-wrapper {
+    min-height: 244px;
+}
+
 .affix + #clips-container {
   padding-top: 252;
 }
